--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,3 +64,11 @@ body {
   margin-top: 0;
   padding-top: 0;
 }
+
+.row {
+  max-width: 100vw;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
