--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@ img {
 }
 
 body {
-  background: rgba(0, 0, 0, 0.7);
+  background: #343a40;
 }
 
 .landing {
@@ -17,7 +17,7 @@ body {
 }
 
 .dark-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #343a40;
   position: absolute;
   top: 0;
   left: 0;
@@ -71,4 +71,13 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+}
+
+.navbar .container {
+  padding: 15px;
+}
+
+.sectionHeader {
+  border: 1px solid black;
+  border-radius: 5px;
 }
